Check configuration at startup. Patch from Will.

BUG: 284224
FIXED-IN: 4.8.1